# core

./: .agents  .gitignore  .gitleaks.toml  .gitmodules  .mcp.json  README.md  WORKFLOW.md  aprovan.code-workspace  mcp.json  package.json  pnpm-workspace.yaml  setup  vscode.code-workspace
.changeset/: config.json  core-platform-packages.md  eslint-config-v1.md  prettier-config-initial.md  shared-shell-components.md  ui-auth-gateway.md  vitest-config-initial.md
.devcontainer/: .devcontainer.json
.multica/: README.md
agents/: architect.md  backend-dev.md  code-quality-sentinel.md  code-scanner.md  coordinator.md  data-scientist.md  deep-researcher.md  defaults.json  engineer.md  eval-builder.md  eval-checker.md  frontend-dev.md  pm.md  pr-reviewer.md
apps/: README.md
docs/: README.md  agent-config-refactor.md  index.md  infrastructure.md  naming-conventions.md  scanner-doc-integration.md  tech-stack.md  workflow.md
evals/: README.md  conftest.py  eval_check_prompt.md  pyproject.toml
evals/agents/: test_ci_checks_before_completion.py  test_config_changes_tracked_in_repo.py  test_task_decomposition_subtasks.py
evals/agents/datasets/: ci_checks_before_completion.json  config_changes_tracked_in_repo.json  task_decomposition_subtasks.json
evals/scoring_bank/: __init__.py  __main__.py  bank.py  cli.py  schema.py  test_bank.py
evals/scoring_bank/data/: scores.jsonl
evals/skills/: test_api_client_error_handling.py
evals/skills/datasets/: api_client_error_handling.json
infra/: .gitignore  Makefile  README.md  cluster.tf  main.tf  providers.tf  tunnel.tf  (+2 more)
(+127 files in other folders)
