[project]
name = "core-evals"
version = "0.1.0"
description = "Evaluation suites for Aprovan agents and skills using Arize Phoenix"
requires-python = ">=3.11"
dependencies = [
    "arize-phoenix",
    "arize-phoenix-client",
    "arize-phoenix-evals",
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["agents", "skills"]
